[gd_scene load_steps=12 format=3 uid="uid://bembev1oscl2o"]

[ext_resource type="Script" path="res://Minigame2/spaceRock.gd" id="1_jrr56"]
[ext_resource type="Shader" uid="uid://bqcddhk4tw6r5" path="res://Minigame2/spaceRockhit.tres" id="2_hjdyh"]
[ext_resource type="Texture2D" uid="uid://qjyvkaepormn" path="res://Minigame2/assets/SpaceRock.png" id="3_ptdcg"]
[ext_resource type="Texture2D" uid="uid://vgl67qeyrk20" path="res://Minigame2/assets/explosion.png" id="4_l0nv2"]
[ext_resource type="AudioStream" uid="uid://dib8bfdijppoh" path="res://Minigame2/assets/RockDestroyed.mp3" id="5_ouwah"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dvl8x"]
resource_local_to_scene = true
shader = ExtResource("2_hjdyh")
shader_parameter/enable = false

[sub_resource type="CircleShape2D" id="CircleShape2D_8cfpy"]
radius = 65.521

[sub_resource type="Animation" id="Animation_73204"]
resource_name = "Explosion"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("explosionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rock:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("explosionSprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_y116t"]
resource_name = "Hit_animation"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rock:material:shader_parameter/enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_iwif5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rock:material:shader_parameter/enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rock:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("explosionSprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i2jao"]
_data = {
"Explosion": SubResource("Animation_73204"),
"Hit_animation": SubResource("Animation_y116t"),
"RESET": SubResource("Animation_iwif5")
}

[node name="SpaceRock" type="Area2D" groups=["damageObj"]]
script = ExtResource("1_jrr56")
minSpeed = 100.0
maxSpeed = 200.0

[node name="Rock" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_dvl8x")
position = Vector2(1.99998, 2.99998)
scale = Vector2(0.340909, 0.340909)
texture = ExtResource("3_ptdcg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8cfpy")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(4, 1.99999)
scale = Vector2(7.4, 7.8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i2jao")
}

[node name="explosionSprite" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(1.75, 1.77059)
scale = Vector2(1.10882, 1.10882)
texture = ExtResource("4_l0nv2")
hframes = 7
frame = 6

[node name="RockDestroyed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ouwah")
pitch_scale = 0.49

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
